# basic-log

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: CompilerOptions.cmake  FetchDependencies.cmake  ProjectDependencies.cmake
docker/: README.md
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/basic_log/: CMakeLists.txt  basic_logger.h  basic_logger.hpp  log_level.h  log_level.hpp
src/: CMakeLists.txt  main.cpp
src/basic_log/: CMakeLists.txt  basic_logger.cpp
src/logger/: CMakeLists.txt  ILogger.h  Logger.cpp  Logger.h
src/utils/: CMakeLists.txt  basic_log_utils.h  basic_log_utils.hpp
src/version/: version.hpp
test/unit/: CMakeLists.txt
test/unit/basic_log/: CMakeLists.txt  ut_basic_logger.cpp
tests/mocks/logger/: CMakeLists.txt  MockLogger.h
tests/unit/logger/: CMakeLists.txt  LoggerTest.cpp
